@@ -1,3 +1,8 @@
+Tue Aug  9 17:17:56 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/os_include/os_dlfcn.h:
+          Added if !defined checks around all defines in this file
+
 Mon Aug  8 21:46:01 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>
 
         * ace/OS_NS_time.inl:
